--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </span>
         </div>
         <footer>
-            &#169; This Calculator belongs to Shane Bartley
+            <br>&#169; This Calculator belongs to Shane Bartley
         </footer>
     </body>
 </html>
